* Wed Jul 06 2016 Nick Miller <nick.miller@onyxpoint.com> - 4.3.1-0
- Changed the Exec['restart-systemd'] to Exec['systemctl-daemon-reload']
  to avoid a conflict with puppetlabs-postgresql

* Fri Apr 15 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.3.0-0
- Created work-around for https://bugzilla.redhat.com/show_bug.cgi?id=1278082
- Users can modify the chroot path in named-chroot.service
- Asserted service, chroot, and non-chroot as private classes

* Tue Feb 23 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.2.0-9
- Added compliance function support

* Thu Dec 03 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.0-8
- `named::non_chroot` will now intentionally fail (with an informative message)
  if included when selinux is not enforcing

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.2.0-7
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-6
- Changed puppet-server requirement to puppet

* Mon Sep 15 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-5
- Restricted the rsync of materials in /etc in non-chroot so that
  users can't accidentally destroy the permissions on /etc itself.

* Mon Jul 21 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-4
- Updated to provide the appropriate pointers to the new rsync layout.

* Wed Jul 02 2014 Kendall Moore <kmoore@keywcorp.com> - 4.2.0-3
- Updated caching nameserver to be SELinux compatible.

* Thu Jun 26 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-2
- Added additional compatiblity with RHEL7 given the new named service
  for chroot is called 'named-chroot'.

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 4.2.0-1
- Removed MD5 file checksums for FIPS compliance.

* Fri Jun 20 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-1
- Ensure that $named::auth_users is an Array.

* Wed Apr 16 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.2.0-0