@@ -1,11 +1,11 @@
 Obsoletes: pupmod-named-test >= 0.0.1
 Requires: pupmod-simp-compliance_markup < 2.0.0-0
-Requires: pupmod-simp-compliance_markup >= 1.0.1-0
+Requires: pupmod-simp-compliance_markup >= 1.0.2-0
 Requires: pupmod-simp-iptables < 5.0.0-0
-Requires: pupmod-simp-iptables >= 4.1.4-0
-Requires: pupmod-simp-rsync < 5.0.0-0
-Requires: pupmod-simp-rsync >= 4.2.2-0
-Requires: pupmod-simp-simpcat < 6.0.0-0
-Requires: pupmod-simp-simpcat >= 5.0.1-0
-Requires: pupmod-simp-simplib < 2.0.0-0
-Requires: pupmod-simp-simplib >= 1.3.1-0
+Requires: pupmod-simp-iptables >= 4.1.5-0
+Requires: pupmod-simp-rsync < 6.0.0-0
+Requires: pupmod-simp-rsync >= 5.0.0-0
+Requires: pupmod-simp-simpcat < 7.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
+Requires: pupmod-simp-simplib < 3.0.0-0
+Requires: pupmod-simp-simplib >= 2.0.0-0
